syntax = "proto3";

package common;

// Store service
service Store {
  rpc PostFeed (StorePostFeedRequest) returns (StorePostFeedResponse) {}
  rpc GetFeed (StoreGetFeedRequest) returns (StoreGetFeedResponse) {}
}

// StoreArticle is an article in the store
message StoreArticle {
  string ID = 1;
  string title = 2;
  int64 date = 3;
  string body = 4;
}

// StorePostFeedRequest is how to put articles into the store
message StorePostFeedRequest {
  string feedID = 1;
  repeated StoreArticle articles = 2;
}

// StorePostFeedResponse is nothing
message StorePostFeedResponse {
}

// StoreGetFeedRequest is how to request articles from the store
message StoreGetFeedRequest {
  string feedID = 1;
  int64 since = 2;
}

// StoreGetFeedResponse is some articles from the store
message StoreGetFeedResponse {
  repeated StoreArticle articles = 2;
}
